--- a/app/explorer/templates/explorer/challenge-summary.html
+++ b/app/explorer/templates/explorer/challenge-summary.html
@@ -49,7 +49,7 @@ var my_image {% if progress.image_file %} = "{{ MEDIA_PREFIX }}{{ progress.image
 $(document).ready(function(){
 
   if (typeof(my_image) == 'undefined'){
-    get_colour_image(localStorage.getItem('archive_token'), frameid, mode='summary')
+    get_colour_image(localStorage.getItem('archive_token'), frameid, mode='analyser')
   }
 
 });
