Change username field name on login

--- a/app/explorer/templates/explorer/login.html
+++ b/app/explorer/templates/explorer/login.html
@@ -24,7 +24,7 @@
         {% csrf_token %}
         <div class="row">
           <div class="col">
-      			<label for="username">Email Address:</label>
+      			<label for="username">Username:</label>
           </div>
           <div class="col">
       			<input type="text" name="username" value="" id="username">
