--- a/app/explorer/templates/500.html
+++ b/app/explorer/templates/500.html
@@ -8,7 +8,7 @@
       <div class="row">
         <div class="col-lg-4">
           <h1>Oops</h1>
-          <p>Something broke!<br/>Please return <a href="{% url 'home' %}">home and try again</a>.</p>
+          <p class="statement">Something broke!<br/>Please return <a href="{% url 'home' %}">home and try again</a>.</p>
 
         </div>
         <div class="col-lg-4">
