--- a/app/explorer/templates/explorer/challenge-summary.html
+++ b/app/explorer/templates/explorer/challenge-summary.html
@@ -25,7 +25,7 @@
         </p>
         </div>
         <div class="col-lg-8">
-          <img src="{% if progress.image_file %}{{ MEDIA_PREFIX }}{{ progress.image_file }}{% else %}{% static 'explorer/images/placeholder.jpg' %}{% endif %}" alt="{{object.name}}" class="img-fluid rounded" id="img-holder">
+          <img src="{% if progress.image_file %}{{ progress.image_file.url|safe }}{% else %}{% static 'explorer/images/placeholder.jpg' %}{% endif %}" alt="{{object.name}}" class="img-fluid rounded" id="img-holder">
           <p>Your picture of {{progress.target}}</p>
         </div>
     </div>
@@ -44,7 +44,7 @@
 <script src="{% static 'explorer/js/utils.js' %}" ></script>
 <script>
 var frameid = {{ progress.frameids}};
-var my_image {% if progress.image_file %} = "{{ MEDIA_PREFIX }}{{ progress.image_file }}"{% endif %};
+var my_image {% if progress.image_file %} = "{{ progress.image_file.url|safe }}"{% endif %};
 
 $(document).ready(function(){
 
