Email template; new observing API

--- a/app/explorer/templates/explorer/challenge-observe.html
+++ b/app/explorer/templates/explorer/challenge-observe.html
@@ -38,7 +38,7 @@ $(document).ready(function(){
   var challenge_id = '{{object.id}}'
   var redirect_url = "{% url 'challenge' object.id %}";
   var image_file = image_files[category];
-  var whatsupurl = "https://lco.global/whatsup/range/?aperture=0m4&format=jsonp";
+  var whatsupurl = "https://whatsup.lco.global/range/?aperture=0m4&format=jsonp";
   var target_type;
 
   if (category == '2.3' || category == '2.2' || category == '1.1'){
