--- a/app/explorer/templates/explorer/challenge-analyser.html
+++ b/app/explorer/templates/explorer/challenge-analyser.html
@@ -53,7 +53,7 @@ function add_answers_to_form() {
   <h1>{% trans "Analyse your image!" %}</h1>
   <div class="row">
     <div class="col-lg-8">
-      <img src="{% if progress.image_file %}/images/{{ progress.image_file }}{% else %}{% static 'explorer/images/placeholder.jpg' %}{% endif %}" alt="{{object.name}}" class="img-fluid rounded" id="img-holder">
+      <img src="{% if progress.image_file %}{{ progress.image_file.url|safe }}{% else %}{% static 'explorer/images/placeholder.jpg' %}{% endif %}" alt="{{object.name}}" class="img-fluid rounded" id="img-holder">
     </div>
     <div class="col-lg-4">
         <div class="arrow bottom right"></div>
