--- a/app/explorer/templates/explorer/challenge-start.html
+++ b/app/explorer/templates/explorer/challenge-start.html
@@ -6,8 +6,16 @@
 {% block main-body %}
 <div class="centre-container">
   <h1>{{object.name}}</h1>
-    <p>{{object.description|safe|markdown}}</p>
-    <p><a href="{% url 'observe' object.pk %}" class="btn btn-lg btn-4 btn-4a animated tada" id="start-btn">{% trans 'Start the challenge' %}</a></p>
+  <div class="container">
+    <div class="row">
+      <div class="col-4">
+      <img src="" class="img-fluid" />
+      </div>
+      <div class="col-8">
+          <p>{{object.description|safe|markdown}}</p>
+          <p><a href="{% url 'observe' object.pk %}" class="btn btn-lg btn-4 btn-4a animated tada" id="start-btn">{% trans 'Start the challenge' %}</a></p>
+      </div>
+    </div>
   </div>
 
 {% endblock %}
