--- a/app/explorer/templates/explorer/base.html
+++ b/app/explorer/templates/explorer/base.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Aldrich" rel="stylesheet">
 
     <link href="{% static "explorer/css/layout.css" %}" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/dc4274378e.js"></script>
   </head>
 
   <body  class="{% block mission-class %}{%endblock%}">
