--- a/app/explorer/templates/explorer/challenge-base.html
+++ b/app/explorer/templates/explorer/challenge-base.html
@@ -7,26 +7,32 @@
 
 {% block menubar %}
 <div class="container-fluid">
-  <div class="dropdown">
-    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      {% trans "menu" %}
-    </a>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-      <a class="dropdown-item" href="/">{% trans "Home" %}</a>
-      <a class="dropdown-item" href="/about/">{% trans "About Serol" %}</a>
-      <a class="dropdown-item" href="/videos/">{% trans "Videos" %}</a>
-      <a class="dropdown-item" href="{% url 'missions' %}">{% trans "Missions" %}</a>
-      <a class="dropdown-item" href="{% url 'stickers' %}">{% trans "My Progress" %}</a>
-      <a class="dropdown-item" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a>
+  <div class="row">
+    <div class="col-2">
+      <div class="dropdown">
+
+        <button class="btn-link dropdown-toggle" type="button" id="dropdownMenuLink" data-toggle="dropdown">
+         <img src="{% static 'explorer/images/serol_logo_sm.png'%}" />
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="/">{% trans "Home" %}</a>
+          <a class="dropdown-item" href="/about/">{% trans "About Serol" %}</a>
+          <a class="dropdown-item" href="/videos/">{% trans "Videos" %}</a>
+          <a class="dropdown-item" href="{% url 'missions' %}">{% trans "Missions" %}</a>
+          <a class="dropdown-item" href="{% url 'stickers' %}">{% trans "My Progress" %}</a>
+          <a class="dropdown-item" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a>
+        </div>
+      </div>
+    </div>
+</div>
+  <div class="row">
+    <div class="col-2">
+    <div class="mission-label mission-{{object.mission.number}}-colour pl-2">{% trans "Mission" %} {{object.mission.number}}</div>
+    </div>
+    <div class="col">
+    <h2><span class="mission-{{object.mission.number}}-colour-text"><i class="fas fa-play"></i></span> Challenge {{object.number}} : {{object.name}}</h2>
     </div>
   </div>
-
-  <div class="navbar-brand">
-    <a  href="/"><img src="{% static 'explorer/images/serol_logo_sm.png'%}" /></a>
-    <span class="nav-heading">Challenge {{object.number}} : {{object.name}}</span>
-  </div>
-
-  <div class="corner-ribbon sticky shadow mission-{{object.mission.number}}-colour"><h2>{% trans "Mission" %} {{object.mission.number}}</h2></div>
 </div>
 {% endblock %}
 
