--- a/app/explorer/templates/explorer/challenge-identify.html
+++ b/app/explorer/templates/explorer/challenge-identify.html
@@ -51,27 +51,21 @@ $(document).ready(function(){
 {% block challengename %}{{object.challenge.name}}{% endblock %}
 
 {% block main-body %}
-<div class="centre-container">
-<h1>{% trans "Which is your picture?" %}</h1>
   <div class="row">
-    <div class="col-lg-10">
+    <div class="col">
+    <h1>{% trans "Click on your picture" %}</h1>
+    <p class="oswald text-large">{% trans "You asked for" %} <strong>{{progress.target}}</strong>.
+        {% trans "That's a" %} <strong>{{object.category}}</strong>.
+      </p>
+      </div>
+  </div>
       <div class="row">
         {% for i in "0123" %}
         <div class="col-6 pb-2">
-          <img src="{% static 'explorer/images/placeholder.jpg' %}" alt="" class="identify-image img-fluid rounded" id="img-{{i}}" data-mine="">
+          <img src="{% static 'explorer/images/placeholder.jpg' %}" alt="" class="identify-image img-fluid img-thumbnail" id="img-{{i}}" data-mine="">
         </div>
         {% endfor %}
       </div>
-    </div>
-    <div class="col-lg-2">
-        <div class="bubble">
-          <p>{% trans "You asked for" %} <strong>{{progress.target}}</strong>.
-              {% trans "That's a" %} <strong>{{object.category}}</strong>.<br/>
-          {% trans "Click on your picture" %}</p>
-        </div>
-    </div>
-  </div>
-</div>
 <div class="identify-answer identify-yes" style="display:none;">{% trans "Correct!" %}</div>
 <div class="identify-answer identify-no" style="display:none;">{% trans "Try Again!" %}</div>
 
