Adding survey infrastructure

--- a/app/explorer/templates/explorer/base.html
+++ b/app/explorer/templates/explorer/base.html
@@ -83,7 +83,8 @@
 
 <footer class="footer">
   <div class="container">
-    <span class="text-muted">&copy; {% now "Y" %} <a href="https://lco.global">Las Cumbres Observatory</a></span>
+    <span class="text-muted">&copy; <a href="https://lco.global">Las Cumbres Observatory</a></span> | 
+    <span class="text-muted"><a href="https://lco.global/observatory/privacy-policy/">Privacy Policy</a></span>
   </div>
 </footer>
 
