--- a/app/explorer/templates/explorer/home.html
+++ b/app/explorer/templates/explorer/home.html
@@ -13,6 +13,11 @@ $(document).ready(function(){
   if (localStorage.getItem('archive_token') == null){
     localStorage.setItem('archive_token','{{request.user.archive_token}}');
   }
+  var ca = getCookie('lco_fb_serol');
+  if (ca == null){
+    $('#surveyModal').modal('show');
+  }
+
 });
 </script>
 {% endif %}
@@ -47,4 +52,19 @@ $(document).ready(function(){
 </div>
 </div>
 
+<div class="modal fade" id="surveyModal" tabindex="-1" role="dialog" aria-labelledby="surveyModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <img src="https://cdn.lco.global/mainstyle/img/LCO_logo_Color_Horizontal_sm.jpg" alt="LCO logo" /></br/>
+        Can you spare 20 seconds to give us feedback?<br/>
+        <a href="https://survey.lco.global/eef70ea6-ff58-45a3-9170-5a43f086eccd/" class="btn btn-secondary" target="_blank" onclick="setCookie('lco_fb_serol','eef70ea6-ff58-45a3-9170-5a43f086eccd','180');$('#surveyModal').modal('hide');window.open('https://survey.lco.global/eef70ea6-ff58-45a3-9170-5a43f086eccd/',
+                         'newwindow',
+                         'width=600,height=600'); return false;">Yes!</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="setCookie('lco_fb_serol','eef70ea6-ff58-45a3-9170-5a43f086eccd','30')">No</button>
+
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
