--- a/app/explorer/templates/explorer/mission_complete.html
+++ b/app/explorer/templates/explorer/mission_complete.html
@@ -8,9 +8,9 @@
 {% block main-content %}
 <div class="container-fluid">
       <div class="row justify-content-center">
-          <div class="col-3">
-            <a href="{% url 'missions' %}" class="btn btn-lg btn-4 btn-4a animated tada">Start a new mission!</a>
-          </div>
+          <p class="pt-4">
+            <a href="{% url 'missions' %}" class="btn btn-lg btn-4 btn-4a text-center">Start a new mission!</a>
+          </p>
       </div>
       <div class="row">
         <div class="col-12">
