--- a/app/explorer/templates/explorer/base.html
+++ b/app/explorer/templates/explorer/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="{% static "explorer/images/favicon.gif" %}">
@@ -10,6 +11,13 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{% static "explorer/images/apple-touch-icon.png" %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static "explorer/images/favicon-32x32.png" %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "explorer/images/favicon-16x16.png" %}">
+      <link rel="apple-touch-icon" sizes="180x180" href="{% static "explorer/images/apple-touch-icon.png" %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static "explorer/images/favicon-32x32.png" %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static "explorer/images/favicon-16x16.png" %}">
+    <link rel="manifest" href="{% static "explorer/images/site.webmanifest" %}">
+    <link rel="mask-icon" href="{% static "explorer/images/safari-pinned-tab.svg" %}" color="#252443">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content=“#ffffff”>
 
     <title>Serol's Cosmic Adventures | {% block title %}powered by Las Cumbres Observatory{% endblock %}</title>
 
@@ -68,22 +76,20 @@
         {% endfor %}
 
         {% block main-content %}
-        <div class="content-wrapper">
-          <div class="content-wrapper-inner">
-            <div class="container">
+
+            <div class="container pt-5">
               <div class="centre-container">
                 {% block main-body %}
                 {% endblock %}
               </div>
             </div>
-          </div>
-        </div>
+
         {% endblock %}
       </main>
 
 <footer class="footer">
   <div class="container">
-    <span class="text-muted">&copy; <a href="https://lco.global">Las Cumbres Observatory</a></span> | 
+    <span class="text-muted">&copy; <a href="https://lco.global">Las Cumbres Observatory</a></span> |
     <span class="text-muted"><a href="https://lco.global/observatory/privacy-policy/">Privacy Policy</a></span>
   </div>
 </footer>
@@ -95,6 +101,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="{% static "explorer/js/auth.js" %}"  type="text/javascript" ></script>
+    <script src="{% static "explorer/js/lottie.js" %}"  type="text/javascript" ></script>
 
     {% block script-content %}
     {% endblock %}
