--- a/app/explorer/templates/explorer/login.html
+++ b/app/explorer/templates/explorer/login.html
@@ -23,25 +23,27 @@
       <form action="" method="post"  id="loginForm" >
         {% csrf_token %}
         <div class="row">
-          <div class="col">
+          <div class="col-md-6 col-12">
       			<label for="username">Username:</label>
           </div>
-          <div class="col">
+          <div class="col-md-6 col-12">
       			<input type="text" name="username" value="" id="username">
       			<div class="red">{{form.username.errors.as_text}}</div>
           </div>
         </div>
       	<div class="row pt-2">
-          <div class="col">
+          <div class="col-md-6 col-12">
         		<label for="password">Password:</label>
           </div>
-          <div class="col">
+          <div class="col-md-6 col-12">
         		<input type="password" name="password" value="" id="password">
         		<div class="red">{{form.password.errors.as_text}}</div>
           </div>
       	</div>
+        <div class="pt-2">
           <input type="hidden" name="next" value="{{ next }}">
       		<button id="login-btn" class="btn btn-lg btn-4 btn-4a">Log me in</button>
+        </div>
         <p class="small">By logging in, you agree to <a href="http://lco.global/observatory/termsofuse" target="_blank">the Las Cumbres Observatory terms of use</a>.</p>
       	<p>
       		<a href="{% url 'password_reset' %}">Forgot your password?</a>
