--- a/app/explorer/templates/explorer/mission.html
+++ b/app/explorer/templates/explorer/mission.html
@@ -5,8 +5,8 @@
 
 {% block main-content %}
 
-<div class="content-wrapper">
-  <div class="container content-wrapper-inner challenge-header">
+<div class="container-fluid">
+
   <div class="row">
     <div class="col-12  mission-content">
       <h1>{% trans "Mission" %} {{object.number}}</h1>
@@ -21,7 +21,6 @@
         </a></p>
     </div>
   </div>
-</div>
 </div>
 
 {% endblock %}
