--- a/app/explorer/static/explorer/network/css/styles.css
+++ b/app/explorer/static/explorer/network/css/styles.css
@@ -25,14 +25,15 @@ body {
 }
 
 img.logo{
- width: 100%;
  max-width:300px;
- max-heigh:100px;
+ max-height:100px;
+ margin: auto;
+ display:block;
 }
 
 .label img {
-  max-height: 25px;
-  max-width: 25px;
+  max-height: 35px;
+  max-width: 35px;
   display:inline-block;
 }
 
