--- a/app/explorer/templates/explorer/challenge-submitted.html
+++ b/app/explorer/templates/explorer/challenge-submitted.html
@@ -58,7 +58,7 @@
 {% endblock %}
 
 {% block script-content %}
-<script src="{% static "explorer/js/utils.js" %}"  type="text/javascript" ></script>
+<script src="{% static "explorer/js/utils.js" %}?q=0.12"  type="text/javascript" ></script>
 <script>
 var requestid = "{{progress.requestid}}";
 var resp;
